<resources>

    <string name="app_name">Mapy hazardu</string>
    <string name="location_title">Lokace</string>
    <string name="detail_title">Detail</string>
    <string name="menu_refresh">Aktualizace</string>
    <string name="menu_add">Nová lokace</string>
    <string name="menu_ok">Potvrdit lokaci</string>
    <string name="menu_cancel">Storno</string>
    <string name="location_name">Název</string>
    <string name="location_geo">Poloha</string>
    <string name="location_photo">Fotka</string>
    <string name="location_hours">Otevírací doba</string>
    <string name="location_provider">Provozovatel</string>
    <string name="location_owner">Majitel</string>
    <string name="location_legal">Legální</string>
    <string name="location_button">Zaznamenat polohu</string>
    <string name="message_refresh">Probíhá aktualizace lokací</string>
    <string name="message_add_new_loc">Vyznačte novou lokaci kliknutím v mapě a potvrďte ji v horním menu</string>
    <string name="message_your_current_loc">Vaše aktuální poloha</string>
    <string name="message_confirm_new_loc">Potvrďte novou pozici v horním menu</string>
    <string name="message_save_ok">Herna byla úspěšně zaznamenána.\nDěkujeme za pomoc!</string>
    <string name="message_save_error">Nastala chyba při ukládání nové herny.\nOmlouváme se za potíže.</string>
    <string name="message_error_when_obtaining_data_from_api">Nepovedlo se získat informaci o hernách ve vašem okolí. Máte zapnutý internet?</string>

</resources>