<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_name"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/location_geo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_geo"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>

        <EditText
            android:id="@+id/location_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_photo"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/location_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hours"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/location_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_provider"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/location_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_owner"
            android:inputType="text" >
        </EditText>

        <CheckBox
            android:id="@+id/location_legal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_legal" >
        </CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendFeedback"
                android:text="@string/location_button" >
            </Button>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancelFeedback"
                android:text="@string/menu_cancel" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>